--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
       dans le cadre du cours <em>Environnement Web</em> au Cégep de Sherbrooke.
     </p>
     <img src="images/reussite.jpg" />
+    <p>Merci de visiter mon site!</p>
   </body>
 </html>
